# alx-project-nexus

./: .env.docker  .env.example  .env.railway  .env.template  .gitignore  ACCOMPLISSEMENTS_FINAUX.md  DEPLOYMENT_BRANCH_SUMMARY.md  Dockerfile  FORCE_REBUILD.txt  Procfile  RAILWAY_CHECKLIST.md  RAILWAY_DATABASE_GUIDE.md  RAILWAY_FIX_URGENT.md  RAILWAY_READY_SUMMARY.md  RAILWAY_VARIABLES_SETUP.md  README.md  STATUS_FINAL_URGENT.md  STATUT_FINAL_COMMIT.md  celerybeat-schedule  create_superuser_railway.txt  docker-compose.yml  docker_debug.py  entrypoint.sh  fix-deploy.sh  pre-deploy.sh  pyproject.toml  railway.json  requirements-local.txt  requirements-production.txt  requirements.txt  restart_docker.py  run_local_test.py  start_railway.sh  test_final.py  test_setup.py  verify_config.py
docs/: CLEANUP_FINAL_REPORT.json  CLEANUP_SUMMARY.json  DEMO_READY_SUMMARY.md  FINAL_ORGANIZATION.md  FINAL_STATUS_REPORT.md  FINAL_STATUS_SUMMARY.md  INDEX.md  NEXT_STEPS_ALX.md  ORGANIZATION_REPORT.json  PRESENTATION_5MIN.md  PRESENTATION_ALX.md  PRESENTATION_ALX_FINAL.md  PRESENTATION_TEMPLATE.md  PROJECT_FINAL_SUMMARY.md  PROJECT_OVERVIEW.md  PROJET_FINAL_RESUME.md  RAPPORT_FINAL_COMPLET.md  RAPPORT_FINAL_ORGANISATION.md  RAPPORT_TACHES_ASYNCHRONES.md  README.md  README_NEW.md  VALIDATION_FINALE_ALX.md  VALIDATION_FINALE_REUSSIE.md  VERIFICATION_FINALE_COMPLETE.md
interactions/: admin.py  models.py  schema.py  tasks.py
posts/: admin.py  models.py  schema.py  tasks.py
social_media_backend/: api_views.py  apps.py  celery.py  celery_admin.py  celery_schedule.py  error_handlers.py  (+8 more)
(+87 files in other folders)
