[tool.poetry]
name = "alx-project-nexus"
version = "1.0.0"
description = "Social Media Feed Backend with Django and GraphQL"
authors = ["Donald Ahossi <donaldalphonso11@gmail.com>"]
readme = "README.md"
packages = [{include = "social_media_backend"}]

[tool.poetry.dependencies]
python = "^3.11"
Django = "^5.1.0"
psycopg2-binary = "^2.9.9"
graphene-django = "^3.2.0"
django-graphql-jwt = "^0.4.0"
django-cors-headers = "^4.4.0"
djangorestframework = "^3.15.2"
celery = "^5.4.0"
redis = "^5.0.1"
python-decouple = "^3.8"
Pillow = "^10.4.0"
django-extensions = "^3.2.3"
whitenoise = "^6.7.0"
gunicorn = "^22.0.0"

[tool.poetry.group.dev.dependencies]
black = "^24.8.0"
isort = "^5.13.2"
flake8 = "^7.1.1"
pytest = "^8.3.2"
pytest-django = "^4.8.0"
pytest-cov = "^5.0.0"
factory-boy = "^3.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
